--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2153,6 +2153,9 @@ footer p span {
 .c-type-trigger input[type="checkbox"] {
     display: none;
 }
+.c-type-trigger input[type="checkbox"]:checked {
+    overflow: hidden;
+}
 .c-type-trigger input[type="checkbox"]:checked + label.checkbox .checkbox__inner .green__ball {
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
@@ -2170,7 +2173,7 @@ footer p span {
     opacity: 1;
 }
 .checkbox {
-    --size: 2.5rem;
+    --size: 2rem;
     display: block;
     width: var(--size);
     height: var(--size);
@@ -2181,6 +2184,7 @@ footer p span {
     background: var(--clr-dark);
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.12), 2px 2px 6px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 0.025), inset -2px -2px 3px rgba(0, 0, 0, 0.05), inset -2px -2px 8px rgba(0, 0, 0, 0.02), inset 1px 3px 3px rgba(255, 255, 255, 0.45), inset 3px 8px 25px rgba(255, 255, 255, 0.35), inset 3px 2px 3px rgba(255, 255, 255, 0.35), inset 3px 2px 5px rgba(255, 255, 255, 0.2), inset 2px 3px 8px rgba(255, 255, 255, 0.085), inset 3px 2px 18px rgba(255, 255, 255, 0.05), inset 2px 3px 25px rgba(255, 255, 255, 0.025), inset 8px 8px 18px rgba(255, 255, 255, 0.1), inset 8px 8px 25px rgba(255, 255, 255, 0.05);
     cursor: pointer;
+    
 }
 .checkbox .checkbox__inner {
     position: relative;
