--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1807,6 +1807,19 @@ footer p span {
      object-fit: contain;
 }
 
+.project-sample-img {
+  margin: 0;
+  padding: 0;
+}
+
+.project-sample-img img {
+  border-radius: 0 1.3rem 1.3rem 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 22rem;
+}
+
 .project-group {
   background-color: var(--clr-dark);
   color: var(--clr-primary);
@@ -1896,6 +1909,7 @@ footer p span {
 .slides img {
   -o-object-fit: contain;
      object-fit: contain;
+  border-radius: 0.5rem;
 }
 
 .slides::-webkit-scrollbar {
