--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1646,6 +1646,16 @@ footer p span {
     border-radius: 0 1.3rem 1.3rem 0;
     object-fit: contain;
 }
+.project-sample-img {
+    margin: 0;
+    padding: 0;
+}
+.project-sample-img img {
+    border-radius: 0 1.3rem 1.3rem 0;
+    object-fit: cover;
+    width: 100%;
+    height: 22rem;
+}
 .project-group {
     background-color: var(--clr-dark);
     color: var(--clr-primary);
@@ -1731,6 +1741,7 @@ footer p span {
 .slides img {
     // width: 540px;
     object-fit: contain;
+    border-radius: 0.5rem;
 }
 
 .slides::-webkit-scrollbar {
