work in pricing js

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1415,7 +1415,7 @@ footer p span {
   box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset, rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
   transition: all 0.3s ease;
   color: var(--clr-primary);
-  background-color: var(--clr-dark);
+  background-color: var(--clr-accent);
 }
 
 #msform .action-button-previous {
@@ -1438,7 +1438,7 @@ footer p span {
   box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset, rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
   transition: all 0.3s ease;
   color: var(--clr-primary);
-  background-color: var(--clr-dark);
+  background-color: var(--clr-accent);
 }
 
 #progressbar {
@@ -1613,6 +1613,7 @@ footer p span {
   background: var(--clr-secondary);
   color: var(--clr-primary);
   z-index: 2;
+  border: 0.5px solid var(--clr-accent);
 }
 
 [type=radio]:checked ~ label ~ .tabby-content {
@@ -1639,6 +1640,7 @@ footer p span {
   border-radius: 0.5rem;
   background-color: var(--clr-secondary);
   color: var(--clr-primary);
+  border: 1px solid var(--clr-secondary) !important;
 }
 
 .button:focus {
