--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1231,7 +1231,7 @@ footer p span {
     rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
     transition: all 0.3s ease;
     color: var(--clr-primary);
-    background-color: var(--clr-dark);
+    background-color: var(--clr-accent);
 }
 
 #msform .action-button-previous {
@@ -1262,7 +1262,7 @@ footer p span {
         rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
     transition: all 0.3s ease;
     color: var(--clr-primary);
-    background-color: var(--clr-dark);
+    background-color: var(--clr-accent);
 }
 // ******this******
 // ._card_ {
@@ -1454,6 +1454,7 @@ footer p span {
     background: var(--clr-secondary);
     color: var(--clr-primary);
     z-index: 2;
+    border: 0.5px solid var(--clr-accent);
 }
 
 [type="radio"]:checked ~ label ~ .tabby-content {
@@ -1483,6 +1484,7 @@ footer p span {
     border-radius: 0.5rem;
     background-color: var(--clr-secondary);
     color: var(--clr-primary);
+    border: 1px solid var(--clr-secondary) !important;
 }
 .button:focus {
     box-shadow: none;
