--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1562,6 +1562,9 @@ footer p span {
     color: var(--clr-secondary);
     font-size: 2rem;
 }
+.project-page-title p {
+    text-align: justify;
+}
 .project-page-title hr {
     background-color: var(--clr-secondary);
     padding: 1px;
@@ -1655,6 +1658,7 @@ footer p span {
     object-fit: cover;
     width: 100%;
     height: 22rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .project-group {
     background-color: var(--clr-dark);
@@ -1740,8 +1744,9 @@ footer p span {
 
 .slides img {
     // width: 540px;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .slides::-webkit-scrollbar {
@@ -2487,8 +2492,16 @@ footer p span {
     .aparat-video {
         margin: 0;
     }
-    .aparat-video iframe {
+    .aparat-video iframe,
+    .project-sample-img img {
         border-radius: 1.3rem;
+    }
+    .project-sample-img img {
+        object-fit: cover;
+        height: unset;
+    }
+    .slides {
+        margin-top: 1rem;
     }
     .my-shuffle-container {
         padding: 2rem 1rem;
