add checkbox to filming section

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1550,7 +1550,7 @@ footer p span {
   flex: 1;
 }
 
-.tabby-tab label {
+.tabby-tab label.gg {
   display: block;
   box-sizing: border-box;
   /* tab content must clear this */
@@ -1563,7 +1563,7 @@ footer p span {
   border-radius: 0.5rem;
 }
 
-.tabby-tab label:hover {
+.tabby-tab label.gg:hover {
   background: var(--clr-dark);
   color: var(--clr-primary);
 }
@@ -1683,6 +1683,39 @@ footer p span {
 
 .float-right {
   float: right;
+}
+
+.float-right-checkbox[type=checkbox] {
+  float: right;
+}
+
+.custom-pricing-margin-btn {
+  margin-top: 500px !important;
+}
+
+.form-check {
+  padding-left: 0 !important;
+  text-align: right;
+}
+
+.ccustom-margin {
+  margin-right: -25px;
+}
+
+.ccustom-height {
+  height: 28px !important;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.border-custom {
+  border-top: 0.5px solid black;
+}
+
+.d-inline {
+  display: inline;
 }
 
 /* BREAKPOINTS ----- */
