--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -505,7 +505,7 @@ h6 {
     background-color: var(--clr-secondary);
 }
 .banner {
-    background-image: url("../../../public/images/orginal-banner9.png");
+    background-image: url("../../../public/images/orginal-banner9-3.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -526,7 +526,7 @@ h6 {
     border-radius: 1.3rem;
     width: 70%;
     margin: auto;
-    margin-top: -5rem;
+    margin-top: -7rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .quick-service-box form {
@@ -846,13 +846,22 @@ footer p span {
     border-color: var(--clr-accent);
 }
 
-.footer-aparat-icon  {
-    
+.footer-aparat-icon {
+    position: relative;
+    top: -0.5rem;
+    // padding-bottom: 0;
+    // border-bottom: 2px solid var(--clr-primary);
 }
-.icon-icons8-aparat:before {
-    content: "\e900";
-    color: #f6f6f6;
-  }
+.footer-aparat-icon::after {
+    content: "";
+    position: absolute;
+    margin-top: 0.1rem;
+    bottom: -6px;
+    right: 0;
+    width: 2rem;
+    height: 2px;
+    background-color: var(--clr-primary);
+}
 /* Owl Carousel ------------------------------------------------*/
 .carousel-banner {
     color: var(--clr-primary);
@@ -1160,12 +1169,30 @@ footer p span {
 .about-us-social-icons {
     display: flex;
     justify-content: space-evenly;
+    position: relative;
 }
 .about-us-social-icons i {
     font-size: 2.5rem;
     color: var(--clr-dark);
     border-bottom: 3px solid var(--clr-dark);
     border-radius: 0.2rem;
+}
+.aboutus-aparat-icon {
+    position: relative;
+    top: 0;
+    // padding-bottom: 0;
+    // border-bottom: 2px solid var(--clr-primary);
+}
+.aboutus-aparat-icon::after {
+    content: "";
+    position: absolute;
+    margin-top: 0.1rem;
+    bottom: 1px;
+    right: 0;
+    width: 2.5rem;
+    height: 3px;
+    border-radius: 0 0 0.2rem 0.2rem;
+    background-color: var(--clr-dark);
 }
 .about-us-banner {
     border-radius: 1.3rem;
@@ -1227,7 +1254,7 @@ footer p span {
 #msform .action-button:hover,
 #msform .action-button:focus {
     box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset,
-    rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
+        rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
     transition: all 0.3s ease;
     color: var(--clr-primary);
     background-color: var(--clr-accent);
@@ -1269,10 +1296,6 @@ footer p span {
 //     border: none;
 //     position: relative;
 // }
-
-
-
-
 
 #progressbar {
     margin-bottom: 30px;
@@ -1353,9 +1376,6 @@ footer p span {
 //**************
 // princing page (fildest 1 setction 1)
 
-
-
-
 ._card {
     margin: 40px;
     position: relative;
@@ -1379,9 +1399,6 @@ footer p span {
     border: 1px solid var(--clr-dark);
     transition: 20s ease;
 }
-
-
-
 
 // ************************************************************************************************************************//
 /* MAKE IT CUTE ----- */
@@ -2174,7 +2191,11 @@ footer p span {
 .c-type-trigger input[type="checkbox"]:checked {
     overflow: hidden;
 }
-.c-type-trigger input[type="checkbox"]:checked + label.checkbox .checkbox__inner .green__ball {
+.c-type-trigger
+    input[type="checkbox"]:checked
+    + label.checkbox
+    .checkbox__inner
+    .green__ball {
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
     transition-delay: 150ms;
@@ -2182,11 +2203,19 @@ footer p span {
 .c-type-trigger input[type="checkbox"]:checked ~ .checkbox__text {
     opacity: 1;
 }
-.c-type-trigger input[type="checkbox"]:checked ~ .checkbox__text .checkbox__text--options span.off {
+.c-type-trigger
+    input[type="checkbox"]:checked
+    ~ .checkbox__text
+    .checkbox__text--options
+    span.off {
     transform: translateY(150%);
     opacity: 0;
 }
-.c-type-trigger input[type="checkbox"]:checked ~ .checkbox__text .checkbox__text--options span.on {
+.c-type-trigger
+    input[type="checkbox"]:checked
+    ~ .checkbox__text
+    .checkbox__text--options
+    span.on {
     transform: translateY(0%);
     opacity: 1;
 }
@@ -2200,9 +2229,20 @@ footer p span {
     align-items: center;
     border-radius: 50%;
     background: var(--clr-dark);
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.12), 2px 2px 6px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 0.025), inset -2px -2px 3px rgba(0, 0, 0, 0.05), inset -2px -2px 8px rgba(0, 0, 0, 0.02), inset 1px 3px 3px rgba(255, 255, 255, 0.45), inset 3px 8px 25px rgba(255, 255, 255, 0.35), inset 3px 2px 3px rgba(255, 255, 255, 0.35), inset 3px 2px 5px rgba(255, 255, 255, 0.2), inset 2px 3px 8px rgba(255, 255, 255, 0.085), inset 3px 2px 18px rgba(255, 255, 255, 0.05), inset 2px 3px 25px rgba(255, 255, 255, 0.025), inset 8px 8px 18px rgba(255, 255, 255, 0.1), inset 8px 8px 25px rgba(255, 255, 255, 0.05);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.12), 2px 2px 6px rgba(0, 0, 0, 0.05),
+        2px 2px 10px rgba(0, 0, 0, 0.025),
+        inset -2px -2px 3px rgba(0, 0, 0, 0.05),
+        inset -2px -2px 8px rgba(0, 0, 0, 0.02),
+        inset 1px 3px 3px rgba(255, 255, 255, 0.45),
+        inset 3px 8px 25px rgba(255, 255, 255, 0.35),
+        inset 3px 2px 3px rgba(255, 255, 255, 0.35),
+        inset 3px 2px 5px rgba(255, 255, 255, 0.2),
+        inset 2px 3px 8px rgba(255, 255, 255, 0.085),
+        inset 3px 2px 18px rgba(255, 255, 255, 0.05),
+        inset 2px 3px 25px rgba(255, 255, 255, 0.025),
+        inset 8px 8px 18px rgba(255, 255, 255, 0.1),
+        inset 8px 8px 25px rgba(255, 255, 255, 0.05);
     cursor: pointer;
-    
 }
 .checkbox .checkbox__inner {
     position: relative;
@@ -2210,7 +2250,18 @@ footer p span {
     height: calc(var(--size) / 1.75);
     border-radius: 50%;
     background: var(--clr-dark);
-    box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.12), inset 2px 2px 5px rgba(0, 0, 0, 0.08), inset 3px 3px 12px rgba(0, 0, 0, 0.05), inset 4px 5px 16px rgba(0, 0, 0, 0.035), inset 0px -1px 2px rgba(255, 255, 255, 0.45), inset -1px -1px 3px rgba(255, 255, 255, 0.45), inset -1px -1px 2px rgba(255, 255, 255, 0.2), inset -1px -1px 2px rgba(255, 255, 255, 0.12), 2px 2px 2px rgba(255, 255, 255, 0.12), 2px 2px 3px rgba(255, 255, 255, 0.1), 2px 2px 5px rgba(255, 255, 255, 0.08), 6px 6px 15px rgba(0, 0, 0, 0.014), 8px 8px 18px rgba(0, 0, 0, 0.08), 12px 12px 28px rgba(0, 0, 0, 0.04);
+    box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.12),
+        inset 2px 2px 5px rgba(0, 0, 0, 0.08),
+        inset 3px 3px 12px rgba(0, 0, 0, 0.05),
+        inset 4px 5px 16px rgba(0, 0, 0, 0.035),
+        inset 0px -1px 2px rgba(255, 255, 255, 0.45),
+        inset -1px -1px 3px rgba(255, 255, 255, 0.45),
+        inset -1px -1px 2px rgba(255, 255, 255, 0.2),
+        inset -1px -1px 2px rgba(255, 255, 255, 0.12),
+        2px 2px 2px rgba(255, 255, 255, 0.12),
+        2px 2px 3px rgba(255, 255, 255, 0.1),
+        2px 2px 5px rgba(255, 255, 255, 0.08), 6px 6px 15px rgba(0, 0, 0, 0.014),
+        8px 8px 18px rgba(0, 0, 0, 0.08), 12px 12px 28px rgba(0, 0, 0, 0.04);
 }
 .checkbox .checkbox__inner .green__ball {
     position: absolute;
@@ -2222,8 +2273,15 @@ footer p span {
     height: 100%;
     border-radius: 50%;
     background: var(--clr-primary);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.12), inset -4px -5px 12px rgba(0, 0, 0, 0.12), inset -5px -6px 12px rgba(0, 0, 0, 0.08), inset 0px -6px 18px rgba(0, 0, 0, 0.06), 2px 1px 8px rgba(152, 255, 112, 0.32), 3px 2px 12px rgba(152, 255, 112, 0.15), 4px 4px 18px rgba(152, 255, 112, 0.08);
-    transition: transform 250ms var(--transition-easing), opacity 300ms var(--transition-easing);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.12),
+        inset -4px -5px 12px rgba(0, 0, 0, 0.12),
+        inset -5px -6px 12px rgba(0, 0, 0, 0.08),
+        inset 0px -6px 18px rgba(0, 0, 0, 0.06),
+        2px 1px 8px rgba(152, 255, 112, 0.32),
+        3px 2px 12px rgba(152, 255, 112, 0.15),
+        4px 4px 18px rgba(152, 255, 112, 0.08);
+    transition: transform 250ms var(--transition-easing),
+        opacity 300ms var(--transition-easing);
     transition-delay: 120ms;
 }
 .checkbox .checkbox__inner .green__ball::after {
@@ -2257,7 +2315,8 @@ footer p span {
     position: absolute;
     right: -0.5rem;
     top: 0%;
-    transition: transform 250ms var(--transition-easing), opacity 150ms var(--transition-easing);
+    transition: transform 250ms var(--transition-easing),
+        opacity 150ms var(--transition-easing);
     transition-delay: 150ms;
 }
 .checkbox__text--options span.off {
@@ -2268,8 +2327,6 @@ footer p span {
     transform: translateY(-150%);
     opacity: 0;
 }
-
-
 
 // Orders ------------------------------------------------
 #order ul {
@@ -2702,7 +2759,7 @@ footer p span {
 // Website Pre-Loader------------------------------------
 
 .pre-loader {
-    background-image: linear-gradient(326deg, var(--clr-secondary) 0%, var(--clr-primary) 74%);
+    background-image: linear-gradient(326deg, #fff 0%, #fff 74%);
     position: fixed;
     height: 100%;
     width: 100%;
@@ -2710,8 +2767,13 @@ footer p span {
     top: 0;
     z-index: 9999999;
 }
+.loader-img {
+    display: block;
+    margin: 100px auto;
+    // filter: drop-shadow(0 0 5px black);
+}
 .sk-fading-circle {
-    margin: 300px auto;
+    margin: 250px auto;
     width: 40px;
     height: 40px;
     position: relative;
@@ -2724,12 +2786,12 @@ footer p span {
     top: 0;
 }
 .sk-fading-circle .sk-circle:before {
-    content: '';
+    content: "";
     display: block;
     margin: 0 auto;
     width: 15%;
     height: 15%;
-    background-color: #fff;
+    background-color: var(--clr-secondary);
     border-radius: 100%;
     -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
     animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
@@ -2834,7 +2896,9 @@ footer p span {
     animation-delay: -0.1s;
 }
 @-webkit-keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
+    0%,
+    39%,
+    100% {
         opacity: 0;
     }
     40% {
@@ -2842,7 +2906,9 @@ footer p span {
     }
 }
 @keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
+    0%,
+    39%,
+    100% {
         opacity: 0;
     }
     40% {
