--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2486,9 +2486,9 @@ footer p span {
         display: none;
     }
     .banner {
-        background-image: url("../../../public/images/orginal-banner9mobile.png");
+        background-image: url("../../../public/images/orginal-banner9-4.png");
         background-size: cover;
-        // background-position: center;
+        background-position: top;
     }
     .quick-service-icons li {
         border-right: none;
