--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1697,6 +1697,10 @@ footer p span {
   text-align: justify;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .title-style {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 700;
@@ -1739,12 +1743,20 @@ footer p span {
   text-align: center;
 }
 
+.text-right {
+  text-align: right !important;
+}
+
 .border-custom {
   border-top: 0.5px solid black;
 }
 
 .d-inline {
   display: inline;
+}
+
+.ffffff {
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
 
 /* BREAKPOINTS ----- */
