added first column of company information

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2989,6 +2989,10 @@ footer p span {
     text-overflow: ellipsis;
   }
 
+  .c-type-trigger {
+    margin-right: 0.6rem;
+  }
+
   .costume-container {
     padding-top: 1rem;
   }
