--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2700,6 +2700,9 @@ float: right;
         overflow: hidden;
         text-overflow: ellipsis;
     }
+    .c-type-trigger {
+        margin-right: 0.6rem;
+    }
     .costume-container {
         padding-top: 1rem;
     }
