--- a/public/css/home.css
+++ b/public/css/home.css
@@ -605,6 +605,24 @@ h6 {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
+.banner-inner {
+  background-color: #fff;
+  padding: 0.6rem 1rem;
+  border-radius: 0 0 1.3rem 1.3rem;
+  margin: auto;
+  width: 45%;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 1px 1px 4px inset, rgba(0, 0, 0, 0.23) -1px 0px 4px inset;
+}
+
+.banner-inner h1 {
+  font-size: 2rem;
+  color: var(--clr-secondary);
+  border: 1px solid rgba(0, 0, 0, 0.267);
+  border-radius: 0 0 0.8rem 0.8rem;
+  padding: 1rem 0.5rem;
+}
+
 /* Service Section -------------------------------------------------------- */
 .quick-service-box h3 {
   text-align: center;
@@ -694,7 +712,7 @@ input[type=text]::placeholder {
   color: var(--clr-dark);
   border-bottom: 3px solid transparent;
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 1rem;
   padding-bottom: 5px;
   border-radius: 0 0 3px 3px;
 }
@@ -2752,10 +2770,18 @@ footer p span {
   }
 
   .banner {
-    background-image: url(/images/orginal-banner9mobile-min57.png?6074fd4463008ca6a839db608d4764bb);
+    background-image: url(/images/orginal-banner9mobile-min57.png?cd28dee8745cf9eefbd9b9e6009ffb7f);
     background-size: cover;
     background-position: center;
     height: 58vh;
+  }
+
+  .banner-inner {
+    width: 80%;
+  }
+
+  .banner-inner h1 {
+    font-size: 1rem;
   }
 
   .quick-service-icons li {
