--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2534,10 +2534,11 @@ float: right;
         background-image: url("../../../public/images/orginal-banner9mobile-min57.png");
         background-size: cover;
         background-position: center;
-        height: 58vh;
+        height: 55vh;
     }
     .banner-inner {
         width: 80%;
+        padding: 0.4rem 0.5rem 0.1rem 0.5rem;
     }
     .banner-inner h1 {
         font-size: 1rem;
