--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1457,7 +1457,7 @@ footer p span {
   box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset, rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
   transition: all 0.3s ease;
   color: var(--clr-primary);
-  background-color: var(--clr-accent);
+  background-color: var(--clr-dark);
 }
 
 #msform .action-button-previous {
@@ -1480,7 +1480,7 @@ footer p span {
   box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset, rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
   transition: all 0.3s ease;
   color: var(--clr-primary);
-  background-color: var(--clr-accent);
+  background-color: var(--clr-dark);
 }
 
 #progressbar {
@@ -1779,6 +1779,7 @@ a {
 
 .card#test {
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
 }
 
 .card-footer {
