--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2517,6 +2517,7 @@ a{
     border-radius: 1.3rem;
     padding: 1rem;
     width: 100%;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
 }
 .user-message-box h6 {
     margin-top: 0.7rem;
