add order section to order page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3255,6 +3255,7 @@ a {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  list-style: none;
 }
 
 .order-details {
@@ -3280,10 +3281,10 @@ a {
 }
 
 .order-collapse ul {
-  display: flex;
-  justify-content: space-between;
+  display: flex !important;
+  justify-content: space-between !important;
   flex-direction: column !important;
-  text-align: center;
+  text-align: center !important;
 }
 
 .order-collapse hr {
