--- a/resources/scss/admin/admin.scss
+++ b/resources/scss/admin/admin.scss
@@ -7,6 +7,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-select/sass/bootstrap-select.scss";
 @import "~md.bootstrappersiandatetimepicker/dist/jquery.md.bootstrap.datetimepicker.style.css";
+@import "../../js/admin/CustomPlugins/MD.BootstrapPersianDateTimePicker-master-bs4/dist/jquery.md.bootstrap.datetimepicker.style.css";
 
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
