--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3416,6 +3416,7 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: justify;
+  line-height: 1.5rem;
 }
 
 .message-text:hover h6 {
