--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2523,6 +2523,7 @@ a {
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: justify;
+    line-height: 1.5rem;
 }
 .message-text:hover h6 {
     display: flex;
