--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -42,7 +42,8 @@
 @import "./files/owl.carousel.min.css";
 @import "~md.bootstrappersiandatetimepicker/dist/mds.bs.datetimepicker.style.css";
 @import url("https://v1.fontapi.ir/css/Samim");
-@import "~leaflet/dist/leaflet.css";
+@import url("https://static.neshan.org/sdk/leaflet/1.4.0/leaflet.css");
+// @import "~leaflet/dist/leaflet.css";
 
 * {
     margin: 0;
