--- a/public/css/home.css
+++ b/public/css/home.css
@@ -136,7 +136,7 @@ h6 {
   background-color: var(--clr-primary);
   display: none;
   overflow-x: hidden;
-  z-index: 50000;
+  z-index: 99999998;
 }
 
 .nav__link {
@@ -2251,7 +2251,7 @@ a {
   top: 0;
   right: 0;
   height: 36rem;
-  z-index: 1;
+  z-index: 9999999;
   background-color: #fff;
   overflow: hidden;
   transition: width 0.3s ease;
@@ -2347,7 +2347,7 @@ a {
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 999999;
+  z-index: 99999999;
   /* Sit on top */
   padding-top: 80px;
   /* Location of the box */
@@ -2793,6 +2793,33 @@ a {
   margin-right: 5px;
 }
 
+.addresses-box ul li {
+  background-color: #fff;
+  padding: 1rem;
+  margin: 1.5rem auto;
+  border-radius: 1.3rem;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+}
+
+.addresses-box h6 {
+  margin: 1rem 0;
+  text-align: justify;
+}
+
+#add-address-btn {
+  display: flex;
+  align-items: center;
+  margin-left: 0;
+}
+
+#add-address-btn i {
+  font-size: 1.3rem;
+}
+
+.remove-address-btn {
+  margin-left: 0;
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
@@ -3200,7 +3227,7 @@ a {
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 9999999;
+  z-index: 99999999;
 }
 
 .loader-img {
