add js to section 3 part 4

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1796,6 +1796,10 @@ a {
   color: var(--clr-primary);
 }
 
+.ProductDetails li div {
+  margin: 100PX;
+}
+
 /* BREAKPOINTS ----- */
 @media screen and (max-width: 767px) {
   .tabs {
