--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -364,6 +364,22 @@ h6 {
     font-weight: 600;
     border: none;
 }
+.info-btn {
+    color: var(--clr-primary);
+    background-color: var(--clr-dark);
+    margin-left: 1rem;
+    cursor: pointer;
+    line-height: 15px;
+    padding: 0.7em 1rem;
+    border-radius: 0.5rem;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
+    font-weight: 600;
+    border: none;
+}
+
 .secondary-btn:hover {
     box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset,
         rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
@@ -1256,7 +1272,7 @@ footer p span {
     // border-radius: 0px;
     cursor: pointer;
     // padding: 10px 5px;
-    margin: 250px 0px 10px 5px;
+    margin: 130px 0px 10px 5px;
     float: right;
     // Secondary style
     border: none;
@@ -1287,7 +1303,7 @@ footer p span {
     // border-radius: 0px;
     cursor: pointer;
     // padding: 10px 5px;
-    margin: 250px 0px 10px 5px;
+    margin: 130px 0px 10px 5px;
     float: right;
     // Secondary style
     border: none;
@@ -1569,9 +1585,9 @@ footer p span {
 
 // custom ckeck box
 
-.float-right-checkbox[type="checkbox"] {
-    float: right;
-}
+// .float-right-checkbox[type="checkbox"] {
+//     float: right;
+// }
 
 .custom-pricing-margin-btn {
     margin-top: 500px !important;
@@ -1624,6 +1640,26 @@ a {
     color: var(--clr-primary);
 }
 
+
+
+.order-margin{
+    margin: 0 5px;
+}
+
+
+.margin-order-2{
+    margin-right: 30px;
+}
+
+.order-marginTop{
+ margin-top: 7px;
+ margin-right: 2px;
+}
+
+
+.margin-hourInput{
+    margin-right: 5px;
+}
 // ****************************************************plus
 .ProductDetails li div{
     margin: 100PX   ;
