--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1272,7 +1272,7 @@ footer p span {
     // border-radius: 0px;
     cursor: pointer;
     // padding: 10px 5px;
-    margin: 130px 0px 10px 5px;
+    margin: 260px 0px 10px 5px;
     float: right;
     // Secondary style
     border: none;
@@ -1303,7 +1303,7 @@ footer p span {
     // border-radius: 0px;
     cursor: pointer;
     // padding: 10px 5px;
-    margin: 130px 0px 10px 5px;
+    margin: 260px 0px 10px 5px;
     float: right;
     // Secondary style
     border: none;
@@ -1558,7 +1558,7 @@ footer p span {
 }
 
 .custom-margin-pricing {
-    margin: 140px 0 40px 0;
+    margin: 80px 0 40px 0;
 }
 
 .text-justify {
@@ -1643,9 +1643,12 @@ a {
 
 
 .order-margin{
-    margin: 0 5px;
+    margin: 0 5px ;
 }
+.order-margin2{
+    margin: 0 2px 0 50px ;
 
+}
 
 .margin-order-2{
     margin-right: 30px;
