--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1457,7 +1457,7 @@ footer p span {
   color: var(--clr-dark);
   background: var(--clr-primary);
   cursor: pointer;
-  margin: 130px 0px 10px 5px;
+  margin: 260px 0px 10px 5px;
   float: right;
   border: none;
   font-weight: 600;
@@ -1480,7 +1480,7 @@ footer p span {
 #msform .action-button-previous {
   width: 100px;
   cursor: pointer;
-  margin: 130px 0px 10px 5px;
+  margin: 260px 0px 10px 5px;
   float: right;
   border: none;
   font-weight: 600;
@@ -1725,7 +1725,7 @@ footer p span {
 }
 
 .custom-margin-pricing {
-  margin: 140px 0 40px 0;
+  margin: 80px 0 40px 0;
 }
 
 .text-justify {
@@ -1810,6 +1810,10 @@ a {
 
 .order-margin {
   margin: 0 5px;
+}
+
+.order-margin2 {
+  margin: 0 2px 0 50px;
 }
 
 .margin-order-2 {
